# CodeGen

./: .gitmodules  CMakeLists.txt  README.md
products/codegen/: CMakeLists.txt
products/codegen/inc/: CodeGenFactory.h  CodeGenUtils.h  CodeTemplate.hpp  ProjectTemplate.hpp
products/codegen/inc/code_templates/: BasicClassTemplate.h  CBGameClassTemplate.h  CBGameEntryPointTemplate.h  CodeGenCodeTemplateClassTemplate.h  CodeGenProjectTemplateClassTemplate.h  CodeTemplateClassTemplate.h  EnumClassTemplate.h  MainEntryPointTemplate.h  ProjectTemplateClassTemplate.h  QDialogClassTemplate.h  QMainWindowClassTemplate.h  QWidgetClassTemplate.h  QtMainEntryPoint.h  RStatsModuleUIClassTemplate.h  SingletonClassTemplate.h  StaticClassTemplate.h  StaticClassTemplate.h.autosave  TemplateClassTemplate.h  VirtualClassTemplate.h
products/codegen/inc/project_templates/: BasicLibraryTemplate.h  CommandlineApplicationTemplate.h  QtLibraryTemplate.h  QtWidgetApplicationTemplate.h  SimpleCodebaseTemplate.h
products/codegen/src/: CodeGenFactory.cpp  CodeGenUtils.cpp  main.cpp
products/codegen/src/code_templates/: BasicClassTemplate.cpp  CBGameClassTemplate.cpp  CBGameEntryPointTemplate.cpp  CodeGenCodeTemplateClassTemplate.cpp  CodeGenProjectTemplateClassTemplate.cpp  CodeTemplateClassTemplate.cpp  EnumClassTemplate.cpp  MainEntryPointTemplate.cpp  ProjectTemplateClassTemplate.cpp  QDialogClassTemplate.cpp  QDialogClassTemplate.cpp.autosave  QMainWindowClassTemplate.cpp  QWidgetClassTemplate.cpp  QtMainEntryPoint.cpp  RStatsModuleUIClassTemplate.cpp  SingletonClassTemplate.cpp  StaticClassTemplate.cpp  TemplateClassTemplate.cpp  VirtualClassTemplate.cpp
products/codegen/src/project_templates/: BasicLibraryTemplate.cpp  CommandlineApplicationTemplate.cpp  QtLibraryTemplate.cpp  QtWidgetApplicationTemplate.cpp  SimpleCodebaseTemplate.cpp
(+1 files in other folders)
